@@ -625,7 +625,7 @@ asciidoc.install(2);
 <h1>Irccd 1.1 user guide</h1>
 <span id="author">Demelier David</span><br>
 <span id="email" class="monospaced">&lt;<a href="mailto:demelier.david@gmail.com">demelier.david@gmail.com</a>&gt;</span><br>
-<span id="revdate">June, 8 2013</span>
+<span id="revdate">January, 30 2014</span>
 <div id="toc">
   <div id="toctitle">Table of Contents</div>
   <noscript><p><b>JavaScript must be enabled in your browser to display the table of contents.</b></p></noscript>
@@ -2007,7 +2007,7 @@ quotes.</p></div>
 <div id="footnotes"><hr></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2014-01-23 20:48:36 CET
+Last updated 2014-01-29 19:44:07 CET
 </div>
 </div>
 </body>
