@@ -13,7 +13,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd MONTH DAY, YEAR
+.Dd @MONTH@ @DAY@, @YEAR@
 .Dt IRCCDCTL.CONF 5
 .Os
 .Sh NAME
